--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,11 @@
 		"target": "es2020",
 		"allowJs": true,
 		"noImplicitAny": true,
-		"moduleResolution": "bundler",
+		"moduleResolution": "nodenext",
 		"importHelpers": true,
 		"isolatedModules": true,
 		"strictNullChecks": true,
-		"lib": ["DOM", "ES5", "ES6", "ES7"]
+		"lib": ["DOM", "ES5", "ES6", "ES7"],
 	},
-	"include": ["**/*.ts"]
+	"include": ["**/*.ts"],
 }
